# prime-suspect

./: Cargo.toml  README.md
src/: main.rs
