[package]
name = "prime-suspect"
description = "A CLI tool for searching primes. Maybe it can do much more than that!"
readme = "README.md"
homepage = "https://github.com/developer-ramen/prime-suspect"
repository = "https://github.com/developer-ramen/prime-suspect"
license = "MIT"
keywords = ["prime", "number"]
categories = ["algorithms", "command-line-utilities", "mathematics"]
version = "0.1.0"
edition = "2021"
exclude = ["/.github", ".deepsource.toml"]

[dependencies]
clap = { version = "4.0.32", features = ["unstable-doc"] }
